<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/gray"
        android:padding="10dp">

        <Button
            android:id="@+id/button_exit"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/log_out" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="411dp"
        android:layout_height="555dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/gray"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:textColor="@color/white"
            android:id="@+id/home_trash"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/Trash" />

        <Button
            android:textColor="@color/white"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/gray"
            android:text="@string/Home" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/home_chat"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/Chat" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>