<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/gray"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/chat_trash"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/Trash"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/chat_home"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="@string/Home"
            android:textColor="@color/white" />

        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/gray"
            android:text="@string/Chat"
            android:textColor="@color/white" />

    </LinearLayout>

    <EditText
        android:id="@+id/messageField"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Введите текст"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnSend"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:text="Отправить"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="409dp"
        android:layout_height="577dp"
        android:layout_marginTop="48dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>